--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.1",
+    "mobx": "^6.12.4",
+    "mobx-react-lite": "^4.0.7",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
