--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.1",
+    "jvtools": "^1.0.5",
     "lodash": "^4.17.21",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
